--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.3.4
+  get:
+
+  youtube_player_flutter: ^8.0.0
+  http: ^0.13.3
+  cached_network_image: ^3.1.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
