--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   http: ^0.13.3
   cached_network_image: ^3.1.0
   intl: ^0.17.0
-
+  dio: ^4.0.0
+  path_provider: ^2.0.2
+  permission_handler:
+  syncfusion_flutter_pdfviewer:
+  ndialog: ^4.1.0
+  responsive_widget: ^2.0.1
 
 dev_dependencies:
   flutter_test:
