--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
 
    <application
         android:label="test_reqelford"
-        android:icon="@mipmap/ic_launcher">
+       android:requestLegacyExternalStorage="true"
+       android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
