--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   intl: ^0.17.0
   dio: ^4.0.0
   path_provider: ^2.0.2
-  permission_handler:
-  syncfusion_flutter_pdfviewer:
+#  syncfusion_flutter_pdfviewer:
   ndialog: ^4.1.0
   responsive_widget: ^2.0.1
+  downloads_path_provider_28: ^0.1.0
+  permission_handler: ^4.4.0+hotfix.2
+  open_file: ^3.0.1
+  flutter_local_notifications: ^1.3.0
 
 dev_dependencies:
   flutter_test:
