--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   permission_handler: ^4.4.0+hotfix.2
   open_file: ^3.0.1
   flutter_local_notifications: ^1.3.0
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
