--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   open_file: ^3.0.1
   flutter_local_notifications: ^1.3.0
   url_launcher:
+  flutter_shapes: ^0.3.0
+
 
 dev_dependencies:
   flutter_test:
