--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^1.3.0
   url_launcher:
   flutter_shapes: ^0.3.0
+  splashscreen:
 
 
 dev_dependencies:
